--- a/_posts/2022-04-02-INMEDIA-梁君彥-相信特首選舉如期進行-不揣測林鄭是否會晤領導人.html
+++ b/_posts/2022-04-02-INMEDIA-梁君彥-相信特首選舉如期進行-不揣測林鄭是否會晤領導人.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/19_0.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 行政長官林鄭月娥昨日取消早上記者會，有報道指她到深圳會見港澳辦主任夏寶龍，並商討特首選舉事宜。<a href="https://www.inmediahk.net/node/政經/有報導指特首昨深圳晤領導人-林鄭拒透露不澄清">林鄭今早在記者會上則拒絕透露和澄清</a>。立法會主席主席梁君彥則表示，相信選舉如期進行，並指林鄭在今早已作交代，自己不會作任何揣測，又稱「我知嘅嘢呢，同你（記者）知嘅嘢呢都係差唔多。」</p>
+<img src="https://images.weserv.nl/?url=inmediahk.net/files/column_images/19_0.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font> 行政長官林鄭月娥昨日取消早上記者會，有報道指她到深圳會見港澳辦主任夏寶龍，並商討特首選舉事宜。<a href="https://www.inmediahk.net/node/政經/有報導指特首昨深圳晤領導人-林鄭拒透露不澄清">林鄭今早在記者會上則拒絕透露和澄清</a>。立法會主席梁君彥則表示，相信選舉如期進行，並指林鄭在今早已作交代，自己不會作任何揣測，又稱「我知嘅嘢呢，同你（記者）知嘅嘢呢都係差唔多。」</p>
 <p>行政長官選舉提名期將在明日展開，記者問到選舉會否延遲，梁君彥重申，現時未收到任何新消息，相信選舉「今日嚟講」都會如期舉行。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4525y6" title="無標題"><img src="https://live.staticflickr.com/65535/51976913113_1f4fe41991_z.jpg" width="640" alt="無標題" /></a><em>立法會主席主席梁君彥</em></p>
 <p>林鄭、多名司局長官員今日落區派發「防疫服務包」，截至下午三點已派發130萬個。署理民政事務局局長陳積志下午則和多名議員到佐敦光裕大廈派發，包括梁君彥、盧偉國、林健鋒、梁美芬、吳永嘉和陸瀚民。</p>
